--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,12 @@
         <br><br><br>
 
         <!--Intro to graphs-->
-        <div class="jumbotron2">
-                <br>
-                <a>Visualizations of Dataset</a>  
+        <div class="wrapper">
+            <div class="divider div-transparent"> 
+            </div>
+            <a>Visualizations of Dataset:</a> 
+            <div class="divider div-transparent"> 
+            </div>
         </div>
         <br><br>
         
