Final edits for webpage

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
                 <br></br>
                 <a> Background of Data:</a><br><br>
                 <ul>
-                    <li>The Generic Conspiracist Beliefs Scale (GCBS) was created for use in researching conspiracy theories. Research had typically measures beliefs in conspiracies by asking questions about specific conspiracy theories. The GCBS attempts to correct problems with this approach by asking broad questions about assumption that are presumed to underlie such beliefs. The GCBS measures an overall score and five facet scores. The scale was developed by Robert Brotherton, Christopher C. French and Alan D. Pickering of Goldsmiths University of London in 2013.</li>
+                    <li>The Generic Conspiracist Beliefs Scale (GCBS) was created for use in researching conspiracy theories. Research had typically measured beliefs in conspiracies by asking questions about specific conspiracy theories. The GCBS attempts to correct problems with this approach by asking broad questions about assumptions that are presumed to underlie such beliefs. The GCBS measures an overall score and five facet scores. The scale was developed by Robert Brotherton, Christopher C. French and Alan D. Pickering of Goldsmiths University of London in 2013.</li>
                     <br>
                     <li>The group was intrigued by conspiracy theories given the rise of conspiracies across the mainstream over the past 5 years. The group decided it would be interesting to dive into data concerning conspiracy theories to gauge and quantify the types of characteristics of a conspiracy theorist.</li>
                     <br>
@@ -95,20 +95,22 @@
                 <br>
 
                 <!--Description of graph elements-->
-                <div class="col-md-3" >
-                    <br>
-                    <h3>Scores Based on Religion and Scores Based on Gender:</h3> 
-                            <br>
-                            <p>
-                                The first chart shows the average scores of each conspiracy theory for each type of religion. 
-                                The size of the bubbles indicate how many of the respondents identified with that particular religion. 
-                                The scale was based on the average scores for each conspiracy theory as well as the overall scores.
-                            </p>
-                            <p>
-                                In the second chart, the averages based on gender identification can be observed. 
-                                Women and other have a higher overall rating as conspiracy theorists in comparison to men. 
-                            </p>
-                </div>
+                
+                    <div class="col-md-5" >
+                        <br>
+                        <h3>Scores Based on Religion and Scores Based on Gender:</h3> 
+                                <br>
+                                <p>
+                                    The first chart shows the average scores of each conspiracy theory for each type of religion. 
+                                    The size of the bubbles indicate how many of the respondents identified with that particular religion. 
+                                    The scale was based on the average scores for each conspiracy theory as well as the overall scores.
+                                </p>
+                                <p>
+                                    In the second chart, the averages based on gender identification can be observed. 
+                                    Women and other have a higher overall rating as conspiracy theorists in comparison to men. 
+                                </p>
+                    </div>
+                
             </div>
             <br><br><br>
     
@@ -118,7 +120,7 @@
                 <p style='padding-left:1px'>Brought to you by Team Lizard People</p>
                         <img src="../static/images/team_lp.gif" style="height:220px ; width:368px" />
                         <br><br>
-                <a style='font-size:20px' href="https://github.com/karengut97/Conspiracy_Theory_Final">Click here to view our code on GitHub!</a>
+                <a style='font-size:20px' href="https://github.com/karengut97/Conspiracy_Theory_Final" target="_blank">Click here to view our code on GitHub!</a>
                 <br><br>
             </div>
         </div>
