--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -357,7 +357,7 @@
 
 
         <h3 id="learn">Would you like to learn more about the (GCB) Generic Conspiracisy Beliefs Scale?</h3>
-        <h2><a href="https://www.frontiersin.org/articles/10.3389/fpsyg.2013.00279/full">*Visit the Original Research Article to Learn More*</a></h2>
+        <h2><a href="https://www.frontiersin.org/articles/10.3389/fpsyg.2013.00279/full" target="_blank">*Visit the Original Research Article to Learn More*</a></h2>
 
 
         <!-- Link to JS file, d3, and plotly-->
